	PR ld/2864, ld/5006 	* elf.c (special_sections): Comment typo. 	(elf_fake_sections): Force SHT_PROGBITS for sections that are 	SHT_NOBITS if BFD section flags say they have contents.